# otsdaq_epics

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
Modules/: FindEPICS.cmake
otsdaq-epics/: CMakeLists.txt
otsdaq-epics/ControlsInterfacePlugins/: CMakeLists.txt  EpicsInterface.h  EpicsInterface_controls.cc  EpicsInterface_slowcontrols.cc
ups/: product_deps
